--- a/client/kuip-site.css
+++ b/client/kuip-site.css
@@ -71,6 +71,18 @@
   margin: 100px 0px !important;
 }
 
+.flex {
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex; 
+}
+
+a {
+  color: #82A383 !important;
+}
+
 @media (max-width: 979px) {
   .content {
     width:100%;
